# hallmhd-dlra-tda

./: .gitignore  README.md  pyproject.toml  runf.sh
benchmarks/: benchmarks.py  thresholds.py
docs/: phase0_architecture.tex
docs/theory/: svd_prediction_sealed.tex
profiling/: fft_results.json  phase0_results.json  profile_fft.py  profile_report.tex  profile_svd.py  svd_results.json
scripts/: phase0_profile.py  run_phase0_profiling.sh
src/hallmhd/: memory_budget.py  parameters.py
