[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallmhd-dlra-tda"
version = "0.1.0"
description = "3D Hall-MHD DLRA simulation with topological disruption detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "gudhi>=3.9",
    "matplotlib>=3.9",
    "h5py>=3.11",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-benchmark>=4.0",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]